main css module

--- a/client/styles/main.module.css
+++ b/client/styles/main.module.css
@@ -7,7 +7,7 @@
 .ShortYTitleText {
 	text-align: center;
 	font-family: 'Inter', sans-serif;
-	font-size: 70px;
+	font-size: 4.5rem;
 	font-weight: 700;
 
 	background: linear-gradient(
