--- a/client/styles/main.module.css
+++ b/client/styles/main.module.css
@@ -2,7 +2,6 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	overflow: hidden;
 }
 
 .ShortYTitleText {
@@ -21,6 +20,9 @@
 	-webkit-text-fill-color: transparent;
 	background-clip: text;
 	text-fill-color: transparent;
+
+	margin-top: 0.25em;
+	margin-bottom: 0.25em;
 }
 
 .URLinput {
@@ -50,6 +52,8 @@
 	border: 0;
 	background: inherit;
 	font-size: x-large;
+	font-family: 'Inter', sans-serif;
+	font-weight: 500;
 }
 
 .Urlinputbox:focus-visible {
@@ -80,6 +84,7 @@
 	border: none;
 
 	color: #ffffff;
+	cursor: pointer;
 }
 
 .ShortifyButton p {
@@ -109,5 +114,5 @@
 	flex-direction: column;
 	list-style-type: none;
 	padding: 0%;
-	gap: 0.5em;
+	gap: 0.6em;
 }
