--- a/client/styles/LinkCard.module.css
+++ b/client/styles/LinkCard.module.css
@@ -1,15 +1,23 @@
 @keyframes link-animation {
 	0% {
-		transform: scale(0.5);
-		/* , translateX(-100%); */
+		transform: scale(0.1);
 	}
 	100% {
+		opacity: 1;
 		transform: scale(1);
-		/* , translateX(0%); */
 	}
 }
 
+.animation {
+	animation: link-animation 0.5s forwards ease-in-out;
+}
+
+.opacity {
+	opacity: 1 !important;
+}
+
 .linkCard {
+	opacity: 0;
 	display: flex;
 	flex-direction: row;
 	align-content: center;
@@ -26,8 +34,7 @@
 	box-shadow: 0px 6px 24px 0px rgba(0, 0, 0, 0.1);
 	outline: 2px solid rgba(0, 0, 0, 0.23);
 	border-radius: 10px;
-	transition: all 175ms ease-in-out, transform 150ms ease-in-out;
-	/* animation: link-animation 0.5s forwards ease-in-out; */
+	transition: transform 175ms ease-in-out;
 }
 
 .linkCard:hover {
