added github button

--- a/client/styles/LinkCard.module.css
+++ b/client/styles/LinkCard.module.css
@@ -45,6 +45,8 @@
 	min-width: 30px;
 	min-height: 30px;
 	position: relative;
+	overflow: hidden;
+	border-radius: 50%;
 	-webkit-user-select: none; /* Safari */
 	-ms-user-select: none; /* IE 10 and IE 11 */
 	user-select: none; /* Standard syntax */
